<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/imageMask">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/football_image_description"
        android:scaleType="centerCrop"
        android:src="@drawable/football" />

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/imageMask" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center_horizontal"
                    android:padding="16dp"
                    android:text="@string/team_a_title"
                    android:textColor="@color/teamTitleColor"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/team_a_score"
                    style="@style/scoreTextStyle"
                    android:text="@string/initial_score" />

                <Button
                    style="@style/scoreButton"
                    android:onClick="teamASafety"
                    android:text="@string/safety_button_text" />

                <Button
                    style="@style/scoreButton"
                    android:onClick="teamAFieldGoal"
                    android:text="@string/field_goal_button_text" />

                <Button
                    style="@style/scoreButton"
                    android:onClick="teamATouchdown"
                    android:text="@string/touchdown_button_text" />

                <Button
                    style="@style/scoreButton"
                    android:onClick="teamAExtraPoint"
                    android:text="@string/extra_point_button_text" />
            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:background="@android:color/darker_gray" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center_horizontal"
                    android:padding="16dp"
                    android:text="@string/team_b_title"
                    android:textColor="#616161"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/team_b_score"
                    style="@style/scoreTextStyle"
                    android:text="@string/initial_score" />

                <Button
                    style="@style/scoreButton"
                    android:onClick="teamBSafety"
                    android:text="@string/safety_button_text" />

                <Button
                    style="@style/scoreButton"
                    android:onClick="teamBFieldGoal"
                    android:text="@string/field_goal_button_text" />

                <Button
                    style="@style/scoreButton"
                    android:onClick="teamBTouchdown"
                    android:text="@string/touchdown_button_text" />

                <Button
                    style="@style/scoreButton"
                    android:onClick="teamBExtraPoint"
                    android:text="@string/extra_point_button_text" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        android:backgroundTint="@color/colorPrimaryDark"
        android:onClick="resetScores_onClick"
        android:src="@drawable/reset_symbol" />

</RelativeLayout>